--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow: hidden !important;
+}
+
+.home-container {
+  width: 100%;
+  height: 100vh;
+  background-position: center;
+  background-image: url(lightning-1056419_1280.jpg);
+  background-size: cover;
+  background-repeat: repeat;
+}
+.main-container {
+  display: flex;
+  width: 100%;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  border: 0.3px solid rgba(255, 255, 255, 0.32);
+}
+.card {
+  width: 400px;
+  height: 300px;
+  padding: 2em;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.272);
+  backdrop-filter: blur(20px) saturate(180%);
+  -webkit-backdrop-filter: blur(20px) saturate(180%);
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 2.8rem;
+  font-weight: 900;
+  color: #fff;
+ 
+}
+h6 {
+  color: #fff;
+  font-size: 1.5rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and(max-width:960) {
+  .main-container {
+    display: flex;
+    width: 90%;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
   }
 }
