--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,22 @@
   background-size: cover;
   background-repeat: repeat;
 }
+.home-container .search{
+  text-align: center;
+  padding: 1rem;
+}
+.home-container input{
+  padding: .7rem 1.5rem;
+  font-size: 1.2rem;
+  border-radius: 25px;
+  border: 1px solid rgba(255, 255, 255, 0.8);
+  background:rgba(0, 0, 0, 0.272);
+  color: #f8f8f8;
+}
+::placeholder{
+  color: #f8f8f8;
+}
+
 .main-container {
   display: flex;
   width: 100%;
