--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@
   background-size: cover;
   background-repeat: repeat;
 }
+.title{
+  text-align: center;
+  color: #f8f8f8;
+
+  
+}
 .home-container .search{
   text-align: center;
   padding: 1rem;
@@ -35,7 +41,8 @@
   min-height: 100vh;
   justify-content: center;
   align-items: center;
-  border: 0.3px solid rgba(255, 255, 255, 0.32);
+  border: 0.3px solid none;
+  
 }
 .card {
   width: 400px;
@@ -46,6 +53,7 @@
   backdrop-filter: blur(20px) saturate(180%);
   -webkit-backdrop-filter: blur(20px) saturate(180%);
   text-align: center;
+  margin-bottom: 150px;
 }
 h1 {
   font-size: 2.8rem;
